fix loi cua tk hieu ngu ???? bo cai side panel voi sua lai cai hight thanh 100% do no bi overflow

--- a/src/screens/login-screen/login-screen.css
+++ b/src/screens/login-screen/login-screen.css
@@ -32,7 +32,7 @@
     padding-right: 145px;
     max-width: 655px;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
